# rUNSWift-2022-release

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.cmake.md  README.md  bootstrap.cmake  field_dimensions.json  pyproject.toml  toolchain-2.1.cmake  toolchain-2.8.cmake
robot/: CMakeLists.txt  README.Eigen.md  libagent.cmake  main.cpp  robot.cmake  runswift.cmake  soccer.cpp  soccer.hpp
robot/blackboard/: Adapter.hpp  Blackboard.cpp  Blackboard.hpp  Blackboard.proto  Blackboard.tcc  naoData.proto  serialise.cpp
robot/gamecontroller/: GameController.cpp  GameController.hpp  RoboCupGameControlData.cpp  RoboCupGameControlData.hpp
robot/libagent/: AgentData.hpp  CMakeLists.txt  README.txt  libagent.cpp  libagent.hpp  qiproject.xml
robot/motion/: LoLAData.cpp  LoLAData.hpp  MotionAdapter.cpp  MotionAdapter.hpp  MotionDefs.hpp  MotionOdometry.cpp  MotionOdometry.hpp
robot/motion/effector/: AgentEffector.cpp  AgentEffector.hpp  Effector.hpp  LoLAEffector.cpp  LoLAEffector.hpp  NullEffector.hpp
robot/motion/generator/: ActionGenerator.cpp  ActionGenerator.hpp  BodyModel.cpp  BodyModel.hpp  ClippedGenerator.cpp  ClippedGenerator.hpp  DeadGenerator.cpp  DeadGenerator.hpp  DistributedGenerator.cpp  DistributedGenerator.hpp  Generator.hpp  GetupGenerator.cpp  GetupGenerator.hpp  HeadGenerator.cpp  HeadGenerator.hpp  KenjiBalanceGenerator.hpp  NullGenerator.cpp  NullGenerator.hpp  RefPickupGenerator.cpp  RefPickupGenerator.hpp  Walk2014Generator.cpp  Walk2014Generator.hpp  WalkEnginePreProcessor.cpp  WalkEnginePreProcessor.hpp
robot/motion/touch/: AgentTouch.cpp  AgentTouch.hpp  LoLATouch.cpp  LoLATouch.hpp  NullTouch.cpp  NullTouch.hpp  Touch.hpp
robot/perception/: PerceptionThread.cpp  PerceptionThread.hpp
robot/perception/behaviour/: BehaviourAdapter.cpp  BehaviourAdapter.hpp  BehaviourHelpers.cpp  BehaviourHelpers.hpp  IMUCalibrationSkill.cpp  IMUCalibrationSkill.hpp  KickCalibrationSkill.cpp  KickCalibrationSkill.hpp  ReadySkillPositionAllocation.hpp  SafetySkill.cpp  SafetySkill.hpp
robot/perception/dumper/: PerceptionDumper.cpp  PerceptionDumper.hpp
robot/perception/kinematics/: Kinematics.cpp  Kinematics.hpp  Parameters.cpp  Parameters.hpp  Pose.cpp  Pose.hpp
robot/perception/stateestimation/: Estimator.hpp  (+3 more)
robot/receiver/: Nao.hpp  Nao.tcc  RemoteControlReceiver.cpp  RemoteControlReceiver.hpp  Team.cpp  Team.hpp
robot/simulation/: AngleSensor.cpp  AngleSensor.hpp  EffectorCommand.hpp  FieldFeature.hpp  Joints.cpp  Joints.hpp  Observation.hpp  PerceptorInfo.cpp  PerceptorInfo.hpp  Sensors.cpp  Sensors.hpp  SimVisionAdapter.cpp  SimVisionAdapter.hpp  SimulationConnection.cpp  SimulationConnection.hpp  SimulationThread.cpp  SimulationThread.hpp
robot/tests/: TestSay.cpp  test_elbow_stiffness_change.py  test_joints_movement.py
robot/thread/: ThreadManager.cpp  ThreadManager.hpp  ThreadManager.tcc
robot/transmitter/: Commands.cpp  Commands.hpp  Commands.proto  Nao.cpp  Nao.hpp  OffNao.cpp  OffNao.hpp  SimExTransmitter.cpp  SimExTransmitter.hpp  Team.cpp  Team.hpp  TransmitterDefs.hpp
robot/types/: AbsCoord.hpp  ActionCommand.hpp  BBox.hpp  BallInfo.cpp  BallInfo.hpp  BehaviourDebugInfo.hpp  BehaviourRequest.hpp  BehaviourSharedData.cpp  BehaviourSharedData.hpp  BroadcastData.cpp  BroadcastData.hpp  ButtonPresses.cpp  ButtonPresses.hpp  CameraSettings.cpp  CameraSettings.hpp  CleverNaoInfo.cpp  CleverNaoInfo.hpp  CombinedCameraSettings.hpp  CombinedFovea.hpp  CombinedFrame.hpp  EstimatorInfoIn.hpp  EstimatorInfoInit.hpp  EstimatorInfoMiddle.hpp  EstimatorInfoOut.hpp  Experiment.hpp  FeetPosition.hpp  FieldBoundaryInfo.hpp  FieldFeatureInfo.cpp  FieldFeatureInfo.hpp  FieldFeatureInfoLegacy.hpp  FieldFeatureRegionData.hpp  FootInfo.hpp  GroupLinks.hpp  Histogram2D.hpp  Histogram2D.tcc  IndexSorter.hpp  Ipoint.hpp  JointValues.hpp  LastSecondInfo.hpp  MotionDebugInfo.hpp  (+20 more)
robot/utils/: Cluster.cpp  Cluster.hpp  ConcurrentMap.hpp  ConfigUtils.cpp  ConfigUtils.hpp  Connection.cpp  Connection.hpp  Connection.tcc  FieldDimensionsJSON.hpp  LeastSquaresLine.cpp  LeastSquaresLine.hpp  Logger.cpp  Logger.hpp  OptionConstants.hpp  PositioningDefs.hpp  ProtobufSerialisable.hpp  SPLDefs.hpp  Timer.cpp  Timer.hpp  TransitionPoses.hpp  angles.hpp  basic_maths.hpp  body.cpp  body.hpp  bodyV5.cpp  bodyV5.hpp  bodyV6.cpp  bodyV6.hpp  boostSerializationVariablesMap.hpp  eigen_helpers.hpp  home_nao.cpp  home_nao.hpp  incapacitated.hpp  matrix_helpers.hpp  options.cpp  options.hpp  set_cloexec.hpp  speech.cpp  speech.hpp  version.hpp
utils/: CMakeLists.txt  REMOVE_FROM_HISTORY.md  bootstrap-qt.cmake  bootstrap-robotdir.cmake
utils/cameraCalibrator/: main.c
utils/librcsscontroller/: README
utils/offnao/: CMakeLists.txt  ConnectionBar.ui  README.md  cgoffnao-wrapper.sh  frame.cpp  frame.hpp  goffnao-wrapper.sh  main.cpp  mediaPanel.cpp  mediaPanel.hpp  naoData.cpp  naoData.hpp  offnao-wrapper.sh  runswift.cfg  serialise.cpp  visualiser.cpp  visualiser.hpp  visualiser.tcc  voffnao-wrapper.sh
utils/ofn-to-ofn2/: CMakeLists.txt  main.cpp
utils/parameter-optimizer/: MultiModalCMKFParamsOptimizer.py  README.md
utils/pose-analyser/: README.md  pose-analyser.py  pose-scorer.py
utils/pth-tinydnn/: CMakeLists.txt  PMCTestB64.nasm  README.md  convert_models.py  test-template.cpp  test.cpp  time-inference.sh  utils.py
utils/remoteControl/: Controller.py  README.md  TerminalGetch.py  transmitter.py
utils/simserver/: README.md  app.py  monitor.py  multiple_sim.py  opp_pose.txt  pose.txt  requirements.txt  sim-position-log-18-1.tsv  sim-position-log-18-2.tsv  sim-position-log-18-3.tsv  sim-position-log-18-4.tsv  sim-position-log-18-5.tsv  simserver.html
utils/state-estimation-simulator/: CMakeLists.txt  README.md  main.cpp
utils/vatnao/: CMakeLists.txt  CONTRIBUTIONS.md  README.md  gdb-vatnao-wrapper.sh  options.cpp  options.hpp  vatnao-wrapper.sh
utils/vatnao-legacy/: CMakeLists.txt  README.md  gdb-vatnao-wrapper.sh  main.cpp  options.cpp  options.hpp  vatnao-wrapper.sh
utils/wifitools/: colors.py  runswiftwireless_template  updateWlanSetup.py
(+445 files in other folders)
